--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       property="og:description"
       content="Daftar Sekarang Untuk Dapatkan Bantuan Pejawat Awam."
     />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="https://bantuan-pejawat-awam-my.pages.dev/img/aidiladha/banner.jpg" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card -->
@@ -1705,3 +1705,4 @@
     <script src="java.js"></script>
   </body>
 </html>
+
